# SmartHouse

./: Cargo.toml  README.md  Task.md  pack.sh  start_imitators.sh
core/: Cargo.toml  build.rs
core/src/: lib.rs  main.rs
core/src/builder/: mod.rs
core/src/cli/: mod.rs
core/src/report/: mod.rs
core/src/room/: mod.rs
core/src/smart_device/: mod.rs
devices/: Cargo.toml
devices/src/: lib.rs
devices/src/device/: mod.rs
devices/src/power_socket/: mod.rs
devices/src/thermometer/: mod.rs
src/: lib.rs  main.rs
src/builder/: mod.rs
src/cli/: mod.rs
src/device/: mod.rs
src/fake_power_socket/: mod.rs
src/fake_thermometer/: config.json  config2.json  config3.json  mod.rs
src/house/: mod.rs
src/power_socket/: mod.rs
src/repor_table/: mod.rs
src/report/: mod.rs
src/reportable/: mod.rs
src/room/: mod.rs
src/smart_device/: mod.rs
src/subscriber/: mod.rs
src/thermometer/: mod.rs
src/transport/: mod.rs
